# sentient-switchblade

./: .gitignore  LICENSE  README.md  pyproject.toml  switchblade-example-config.toml  tox.ini
assets/: switchblade-logotype.xcf
bundles/python-poetry-base/: .flake8  bundle.toml
src/switchbladecli/: exceptions.py  utils.py
src/switchbladecli/cli/: __main__.py  bundle_cache.py  config.py  lint.py  test.py  update.py
src/switchbladecli/modes/: python_poetry.py  tool_runner.py
src/switchbladecli/processors/: python_poetry.py
tests/: conftest.py  test_config.py  test_lint.py  test_test.py  test_update.py  test_utils.py
tests/files/: invalid_value.switchblade  missing_field.switchblade
tests/files/previous.switchblade-cache/: latest.toml
tests/files/previous.switchblade-cache/12340000/: bundle.toml
tests/files/testbundle/: .pre-commit-config.yaml  .pylintrc
tests/files/testproject/: .switchblade  pyproject.toml
tests/files/testproject/src/: some_thing.py
tests/files/testproject/tests/: test_things.py
